Fix scrolling on mobile

--- a/components/src/Bloomreach/bloomreach.headersearch.main.less
+++ b/components/src/Bloomreach/bloomreach.headersearch.main.less
@@ -138,11 +138,11 @@
           .suggestion-element {
             margin: 1;
             padding-left:0;
-            padding-top:17px;
-            padding-bottom:17px;
+            padding-top:15px;
+            padding-bottom:15px;
             text-align: center;
             color: @mainTextColor;
-            font-size: 20px;
+            font-size: 18px;
             cursor: pointer;
             &:active {
               background-color: @firstComplimentBackground
